# starting-ragchatbot-codebase

./: .eslintignore  .eslintrc.json  .gitignore  .pre-commit-config.yaml  .prettierrc  CODE_QUALITY.md  TEST_GUIDE.md  pyproject.toml  run_tests.sh
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
frontend/: index.html  script.js  style.css
tests/e2e/: test_rag_workflow.py
tests/fixtures/: conftest.py  test_data.py
tests/integration/: test_api.py
tests/unit/: test_ai_generator.py  test_document_processor.py  test_rag_system.py  test_search_tools.py  test_session_manager.py  test_vector_store.py
